# MediaGudie

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/norman/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/norman/: App.kt  MainActivity.kt  TestActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/norman/: ExampleUnitTest.kt
audio/: README.md  build.gradle
audio/src/androidTest/java/com/norman/audio/: ExampleInstrumentedTest.java
audio/src/main/: AndroidManifest.xml
audio/src/main/java/com/norman/audio/: AdCodecActivity.java  AdMainActivity.java  AdRecordActivity.java  AudioCodec.java  DeAudioCodec.java  Status.java  UtilConversion.java  (+1 more)
audio/src/main/res/layout/: activity_ad_codec.xml  activity_ad_main.xml  activity_ad_record.xml  activity_audio_record.xml  activity_audio_track.xml
audio/src/main/res/values/: strings.xml
camera/: README.md  build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/res/drawable/: ugc_capture_cancel_selector.xml  ugc_capture_enter_album_selector.xml  ugc_record_video_progressbar.xml  ugc_switch_camera_selector.xml  ugc_video_timelong_bg.xml
camera/src/main/res/layout/: activity_cm_capture.xml  activity_cm_main.xml
camera/src/main/res/values/: colors.xml  ugc_styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib_runtime/: build.gradle
lib_runtime/src/main/: AndroidManifest.xml
opengl/: README.md  build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/res/layout/: activity_open_gl.xml  activity_opengl_main.xml
rtmp/: README.md  build.gradle
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/jni/: CMakeLists.txt  rtmp_dump_jni.c
rtmp/src/main/jni/LibRtmp_Client_for_android/: CMakeLists.txt  librtmp-jni.c  librtmp-jni.h  rtmpmuxer.c
rtmp/src/main/jni/LibRtmp_Client_for_android/librtmp/: handshake.h  rtmp.c  rtmp.h  rtmp_sys.h
rtmp/src/main/jni/util/: log.h
rtmp/src/main/res/layout/: activity_rtmp_main.xml
video/: README.md  build.gradle
video/src/main/: AndroidManifest.xml
video/src/main/res/layout/: activity_media_player.xml  activity_media_recorder.xml  activity_muxer.xml  activity_video_codec.xml  activity_video_main.xml  activity_video_view.xml  content_media_recode.xml
video/src/main/res/values/: strings.xml
(+45 files in other folders)
